// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<App /> mount rendering matches the snapshot 1`] = `
<App>
  <div
    className="App"
  >
    <header
      className="App-header"
    >
      <h1>
        Welcome to React
      </h1>
      <p
        className="App-intro"
      >
        Edit 
        <code>
          src/App.js
        </code>
         and save to reload.
      </p>
      <Title
        text="Some title"
      >
        <div>
          Some title
        </div>
      </Title>
      <a
        className="App-link"
        href="https://reactjs.org"
        rel="noopener noreferrer"
        target="_blank"
      >
        Learn React
      </a>
    </header>
  </div>
</App>
`;

exports[`<App /> shallow rendering matches the snapshot 1`] = `
<div
  className="App"
>
  <header
    className="App-header"
  >
    <h1>
      Welcome to React
    </h1>
    <p
      className="App-intro"
    >
      Edit 
      <code>
        src/App.js
      </code>
       and save to reload.
    </p>
    <Title
      text="Some title"
    />
    <a
      className="App-link"
      href="https://reactjs.org"
      rel="noopener noreferrer"
      target="_blank"
    >
      Learn React
    </a>
  </header>
</div>
`;
